test/modules/errors/assign-var-from-module.chpl
module Program {
  module M { }

  var m = M;
}
